feat: adds deployment

--- a/ivy_server/regressor.ipynb
+++ b/ivy_server/regressor.ipynb
@@ -141,7 +141,7 @@
    "id": "3aff1cd8",
    "metadata": {},
    "source": [
-    "# Send test inference request"
+    "### Send test inference request"
    ]
   },
   {
@@ -192,9 +192,125 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b0bfbcf1",
+   "metadata": {},
+   "source": [
+    "# Deployment"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7e318447",
+   "metadata": {},
+   "source": [
+    "## Building a custom image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0514b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mlserver build . -t 'my-ivy-server:0.1.0'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c78e0a2a",
+   "metadata": {},
+   "source": [
+    "## Spin up a container and then send a test request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecbd6079",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -it --rm -p 8080:8080 my-ivy-server:0.1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98662f48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import numpy as np\n",
+    "\n",
+    "from mlserver.types import InferenceRequest\n",
+    "from mlserver.codecs import NumpyCodec\n",
+    "\n",
+    "x_0 = np.random.randn(4,3).astype(np.float32)\n",
+    "inference_request = InferenceRequest(\n",
+    "    inputs=[\n",
+    "        NumpyCodec.encode_input(name=\"X\", payload=x_0)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "endpoint = \"http://localhost:8080/v2/models/ivy-regressor/infer\"\n",
+    "response = requests.post(endpoint, json=inference_request.dict())\n",
+    "\n",
+    "response.json()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "50eb4814",
+   "metadata": {},
+   "source": [
+    "## Deploying our custom image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a7d0ee8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing seldondeployment.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile seldondeployment.yaml\n",
+    "apiVersion: machinelearning.seldon.io/v1\n",
+    "kind: SeldonDeployment\n",
+    "metadata:\n",
+    "  name: ivy-model\n",
+    "spec:\n",
+    "  protocol: v2\n",
+    "  predictors:\n",
+    "    - name: default\n",
+    "      graph:\n",
+    "        name: ivy-regressor\n",
+    "        type: MODEL\n",
+    "      componentSpecs:\n",
+    "        - spec:\n",
+    "            containers:\n",
+    "              - name: ivy-regressor\n",
+    "                image: my-ivy-server:0.1.0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa572b7e",
    "metadata": {},
    "outputs": [],
    "source": []
