feat: adds ivy install from source with... dockerfile creation codes

--- a/ivy_server/regressor.ipynb
+++ b/ivy_server/regressor.ipynb
@@ -210,6 +210,46 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "746ac1bf",
+   "metadata": {},
+   "source": [
+    "### (optional) install ivy from source instead of pypi as default\n",
+    "extremely useful if you're looking to use cutting-edge updates in ivy that aren't updated on the pypi package yet  \n",
+    "make sure to comment out ivy-core from requirements.txt file!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bee3a808",
+   "metadata": {},
+   "source": [
+    "following command will generate a Dockerfile where we can add the bash commands to install ivy from source  \n",
+    "this has been already done for you in this tutorial (you will find the Dockerfile already exists). feel free to remove the file if required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb5053d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mlserver dockerfile ."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8f0a4cad",
+   "metadata": {},
+   "source": [
+    "### build "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0514b2b",
